// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Help unit tests Help connected snapshot test 1`] = `
Array [
  <header
    className="Header"
  >
    <a
      className="header_a"
      href="/"
      onClick={[Function]}
    >
      <img
        alt=""
        className="home_logo"
        src="home_logo.png"
      />
      <h1
        className="title"
      >
         Annuaire des Anciens 
      </h1>
    </a>
  </header>,
  <nav
    className="Nav"
  >
    <div
      className="Menu"
    >
      <a
        className="button"
        href="/"
        onClick={[Function]}
      >
        accueil
      </a>
      <a
        className="button"
        href="/search"
        onClick={[Function]}
      >
        rechercher
      </a>
      <a
        className="button"
        href="/profile"
        onClick={[Function]}
      >
        mon profil
      </a>
      <a
        className="button"
        href="/"
        onClick={[Function]}
      >
        se déconnecter
      </a>
    </div>
    <a
      className="help_link"
      href="/help"
      onClick={[Function]}
    >
      <img
        alt=""
        className="help_icon"
        src="help_icon.png"
      />
    </a>
  </nav>,
  <div
    className="Help"
  >
    <section
      className="help_section"
    >
      <div
        className="div1"
      >
        Cette application a été développée par
      </div>
      <a
        className="div2"
        href="http://etic-insa.com/"
      >
         ETIC INSA Technologies 
      </a>
      <div
        className="div3"
      >
        Elle permet de rechercher les anciens membres de la Junior en fonction de divers critères comme leur nom, prénom, entreprise pour laquelle ils travaillent ou encore leur année de mandat. Si vous avez des remarques ou suggestions, merci d'en faire par à
        <div
          className="contact toCopy"
          onClick={[Function]}
          title="Cliquer pour copier "
        >
          contact@etic-insa.com
        </div>
        
      </div>
    </section>
  </div>,
]
`;

exports[`Help unit tests Help not connected snapshot test 1`] = `
Array [
  <header
    className="Header"
  >
    <a
      className="header_a"
      href="/"
      onClick={[Function]}
    >
      <img
        alt=""
        className="home_logo"
        src="home_logo.png"
      />
      <h1
        className="title"
      >
         Annuaire des Anciens 
      </h1>
    </a>
  </header>,
  <nav
    className="Nav"
  >
    <div
      className="Menu"
    >
      <a
        className="button"
        href="/"
        onClick={[Function]}
      >
        accueil
      </a>
      <a
        className="button"
        href="/connection"
        onClick={[Function]}
      >
        se connecter
      </a>
    </div>
    <a
      className="help_link"
      href="/help"
      onClick={[Function]}
    >
      <img
        alt=""
        className="help_icon"
        src="help_icon.png"
      />
    </a>
  </nav>,
  <div
    className="Help"
  >
    <section
      className="help_section"
    >
      <div
        className="div1"
      >
        Cette application a été développée par
      </div>
      <a
        className="div2"
        href="http://etic-insa.com/"
      >
         ETIC INSA Technologies 
      </a>
      <div
        className="div3"
      >
        Elle permet de rechercher les anciens membres de la Junior en fonction de divers critères comme leur nom, prénom, entreprise pour laquelle ils travaillent ou encore leur année de mandat. Si vous avez des remarques ou suggestions, merci d'en faire par à
        <div
          className="contact toCopy"
          onClick={[Function]}
          title="Cliquer pour copier "
        >
          contact@etic-insa.com
        </div>
        
      </div>
    </section>
  </div>,
]
`;
